# gbcpp

./: .gitignore  .travis.yml  Bus.cpp  CMakeLists.txt  GameBoy.cpp  PVS-Studio.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  cpu.cpp  cpu.h  cpuimpl.cpp  customflags.h  helpers.cpp  helpers.h  main.cpp  main2.cpp  mm.cpp  mm.h  oplookup.cpp  ops.cpp  ops.h  opswitch.inc  ppu.cpp  ppu.h  sonar-project.properties  stddefs.h  utils.cpp  utils.h
.github/workflows/: codeql-analysis.yml
include/: cpu.h  cpuimpl.h  customflags.h  helpers.h  mm.h  ops.h  ppu.h  stddefs.h  utils.h
include/component/: BusMessage.cpp  BusMessage.h  Clock.h  Instruction.h  MessageBus.h  Opcode.h  Registers.h
include/fmt/: os.h
include/interface/: GameBoy.h  IBus.h  ICpu.h  ISynchronized.h  ISystem.h  ITickable.h
include/lib/spdlog/sinks/: daily_file_sink.h
include/resource/: OpcodeInfo.h  Utils.h
include/spdlog/: pattern_formatter-inl.h  tweakme.h
include/spdlog/sinks/: hourly_file_sink.h
include/system/: Cpu.h  CpuImpl.h  Mmu.h  Ppu.h
lib/: fmtd.lib
roms/blargg/cpu_instrs/individual/: 07-jr,jp,call,ret,rst.asm
tests/: CMakeLists.txt  CompilationDump  catch.hpp  cpuimpl.test.cpp  test.1.PVS-Studio.cfg  test.PVS-Studio.cfg  test.PVS-Studio.i  test.cpp  test2.1.PVS-Studio.cfg  test2.1.PVS-Studio.i  test2.PVS-Studio.cfg  test2.PVS-Studio.i  test2.cpp
